# model-bridge-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  ENVIRONMENT.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  coder_ai_allocator_v1.0.py  coder_ai_allocator_v1.1.py  mcp_config.json  plugin.json  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPROVEMENT_ROADMAP.md  PLUGIN_GUIDE.md
docs/plans/: 2026-02-10-phase2-hardening-plan.md  2026-02-10-phase3-ask-ux-efficiency-plan.md  2026-02-11-provider-registry-design.md  2026-02-11-provider-registry-implementation-plan.md  2026-02-13-p3-1-plugin-architecture-design.md  2026-02-13-p3-2-distributed-caching-design.md  2026-02-13-p3-3-streaming-design.md  2026-03-09-claude-46-effort-implementation-plan.md  2026-03-09-codex-model-reasoning-effort-implementation-plan.md  2026-03-09-gemini-31-sdk-effort-implementation-plan.md  2026-05-22-agy-cli-integration-plan.md
docs/skills/: orchestrator-parallel-policy.md  skill-routing-spec.md
environment/: model-bridge-mcp_dev.yml  model-bridge-mcp_dev_linux.yml
schemas/: error_info.schema.json  list_ollama_models.schema.json
skills/: README.md
skills/ask-batch-workflow/: SKILL.md
skills/ask-code-writing-workflow/: SKILL.md
skills/ask-general-workflow/: SKILL.md
skills/ask-provider-routing-workflow/: SKILL.md
skills/ask-review-workflow/: SKILL.md
skills/ask-strict-json-workflow/: SKILL.md
src/model_bridge/: main.py  runtime.py
tests/: __init__.py
tests/integration/: test_ask_unified_tool.py  test_streaming_mode.py  (+1 more)
(+72 files in other folders)
