[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-bridge-mcp"
version = "0.1.0"
description = "Modular MCP bridge server for model CLI failover"
readme = "RELEASE_NOTES.md"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"model_bridge.config" = ["*.yaml"]
