[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-bridge-mcp"
version = "0.1.3"
description = "Modular MCP bridge server for model CLI failover"
readme = "RELEASE_NOTES.md"
requires-python = ">=3.10"
dependencies = [
  "mcp",
  "pydantic>=2.0",
  "PyYAML",
  "jsonschema>=4.0",
]

[project.scripts]
model-bridge = "model_bridge.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"model_bridge.config" = ["*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
